# rust-chip8-emulator

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  cpu.rs  display.rs  main.rs  platform.rs
